tests/paczka1/fuzzy1/57002658.err
Error in line 2: CNy5p S461 7-,2
Error in line 4: Gog1xQ S900 52,0
Error in line 16: 6OZi7 S461 97,5
Error in line 23: 6OZi7 A97 35,7
Error in line 34: Gog1xQ S461 63,1
Error in line 31: uS4 S900 167,3
